syntax = "proto3";
package dnzzzsmsff.api;
option go_package = "dnzzzsmsff/api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

service SmsFF {
  rpc SendSms (SendSmsReq) returns (SendSmsResp)  {
    option (google.api.http) = {
      post: "/sendsms",
      body: "*",
    };
  }
}

message SendSmsReq {
  string text = 1;
}

message SendSmsResp {

}